Fix cropped input time values.

--- a/src/scripts/Providers/SharedProviderResources/Flatpickr/_flatpickr.scss
+++ b/src/scripts/Providers/SharedProviderResources/Flatpickr/_flatpickr.scss
@@ -41,6 +41,8 @@
 	}
 
 	.numInputWrapper {
+		width: 56px;
+
 		span {
 			&.arrowUp,
 			&.arrowDown {
